<resources>
    <string name="app_name">SuperLive</string>
    <string name="verify_code">Verify Code</string>
    <string name="resend_code">resend Code</string>
    <string name="enter_the_otp_code_you_received_via_sms">enter the otp code you received via sms</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="best_live">Best Live</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="person">Person</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="news_feed">Search</string>
</resources>